pre-print clean up

--- a/paper/cfs-model-refs.bib
+++ b/paper/cfs-model-refs.bib
@@ -1,5 +1,5 @@
 @article{helm2017,
-  title={Agriculture after brexit},
+  title={Agriculture after {B}rexit},
   author={Helm, Dieter},
   journal={Oxford Review of Economic Policy},
   volume={33},
@@ -21,14 +21,14 @@
 }
 
 @misc{normile2019,
-  title={African swine fever marches across much of Asia},
+  title={African swine fever marches across much of {A}sia},
   author={Normile, Dennis},
   year={2019},
   publisher={American Association for the Advancement of Science}
 }
 
 @article{kummu2020,
-  title={Interplay of trade and food system resilience: Gains on supply diversity over time at the cost of trade independency},
+  title={Interplay of trade and food system resilience: gains on supply diversity over time at the cost of trade independency},
   author={Kummu, Matti and Kinnunen, Pekka and Lehikoinen, Elina and Porkka, Miina and Queiroz, Cibele and R{\"o}{\"o}s, Elin and Troell, Max and Weil, Charlotte},
   journal={Global Food Security},
   volume={24},
@@ -37,7 +37,7 @@
   publisher={Elsevier}
 }
 @article{poppy2019,
-  title={Meeting the demand for meat: analysing meat flows to and from the UK pre and post Brexit},
+  title={Meeting the demand for meat: analysing meat flows to and from the {UK} pre and post Brexit},
   author={Poppy, Guy M and Baverstock, Jenny and Baverstock-Poppy, Joseph},
   journal={Trends in Food Science \& Technology},
   volume={86},
@@ -47,7 +47,7 @@
 }
 
 @article{feng2017,
-  title={`Deal' or `no deal'? Impacts of alternative post-Brexit trade agreements on UK agriculture},
+  title={`{D}eal' or `no deal'? {I}mpacts of alternative post-Brexit trade agreements on UK agriculture},
   author={Feng, Siyi and Patton, Myles and Binfield, Julian and Davis, John},
   journal={EuroChoices},
   volume={16},
@@ -101,12 +101,11 @@
   year={2020},
   author={{Agricultural and Horticultural Development Board}},
   shortauthor={{AHDB}},
-  howpublished={\url{https://ahdb.org.uk/news/uk-pig-meat-exports-show-strong-growth-in-july}},
-  note = {Accessed: 2020-10-13}
+  note={Available at \url{https://ahdb.org.uk/news/uk-pig-meat-exports-show-strong-growth-in-july}}
 }
 
 @article{mason2020,
-  title={Modelling the global economic consequences of a major African swine fever outbreak in China},
+  title={Modelling the global economic consequences of a major {A}frican swine fever outbreak in {C}hina},
   author={Mason-D'Croz, Daniel and Bogard, Jessica R and Herrero, Mario and Robinson, Sherman and Sulser, Timothy B and Wiebe, Keith and Willenbockel, Dirk and Godfray, H Charles J},
   journal={Nature Food},
   volume={1},
@@ -128,8 +127,10 @@
 }
 
 @article{sole1996,
-  title={Phase transitions and complex systems: Simple, nonlinear models capture complex systems at the edge of chaos},
+  title={Phase transitions and complex systems: simple, nonlinear models capture complex systems at the edge of chaos},
   author={Sol{\'e}, Ricard V and Manrubia Cuevas, Susanna and Luque, Bartolo and Delgado, Jordi and Bascompte, Jordi},
+  journal={Complexity},
+  volume={1},
   year={1996},
   publisher={John Wiley \& Sons}
 }
@@ -163,18 +164,20 @@
 @misc{DEFRA2019auk18,
   title={{Agriculture in the United Kingdom 2018}},
   shortauthor={{DEFRA}},
-  author={Department for Environment, Food and Rural Affairs},
+  author={{Department for Environment, Food and Rural Affairs}},
   year={2019},
-  publisher={Deparment for Environment Food and Rural Affairs (DEFRA)}
+  publisher={Department for Environment Food and Rural Affairs (DEFRA)}
 }
 
 @article{james2020,
-  title={Geodemographic Patterns of Meat Expenditure in Great Britain},
+  title={Geodemographic Patterns of Meat Expenditure in {G}reat {B}ritain},
   author={James, William HM and Lomax, Nik and Birkin, Mark and Collins, Lisa M},
   journal={Applied Spatial Analysis and Policy},
   pages={1--28},
+  volume = {x},
   year={2020},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1007/s12061-020-09344-5}
 }
 
 @Manual{rcoreteam2020,
@@ -195,9 +198,9 @@
  }
 
 @article{carpenter2017,
-  title={Stan: A probabilistic programming language},
+  title={Stan: a probabilistic programming language},
   author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
-  journal={Journal of statistical software},
+  journal={Journal of Statistical Software},
   volume={76},
   number={1},
   year={2017},
@@ -247,11 +250,13 @@
   publisher={National Acad Sciences}
 }
 
-@book{FAO1996,
-  title={World Food Summit: Rome Declaration on World Food Security and World Food Summit Plan of Action},
-  author={FAO.},
-  year={1996},
-  publisher={FAO}
+@book{FAO2009,
+  title={World summit on food security: declaration of the world summit on food security},
+  shortauthor={FAO},
+  author={{Food and Agriculture Organization}},
+  year={2009},
+  publisher={FAO},
+  note={Available at \url{http://www.fao.org/wsfs/wsfs-list-documents/en/}}
 }
 
 
@@ -277,17 +282,6 @@
   publisher={American Association for the Advancement of Science}
 }
 
-@article{ericksen2008,
-  title={Conceptualizing food systems for global environmental change research},
-  author={Ericksen, Polly J},
-  journal={Global environmental change},
-  volume={18},
-  number={1},
-  pages={234--245},
-  year={2008},
-  publisher={Elsevier}
-}
-
 @article{ericksen2010,
   title={The value of a food system approach},
   author={Ericksen, Polly and Stewart, Beth and Dixon, Jane and Barling, David and Loring, Philip and Anderson, Molly and Ingram, John},
@@ -296,17 +290,6 @@
   pages={24--25},
   year={2010},
   publisher={Earthscan, London, UK}
-}
-
-@article{ingram2011,
-  title={A food systems approach to researching food security and its interactions with global environmental change},
-  author={Ingram, John S},
-  journal={Food Security},
-  volume={3},
-  number={4},
-  pages={417--431},
-  year={2011},
-  publisher={Springer}
 }
 
 @article{springmann2018,
@@ -321,7 +304,7 @@
 }
 
 @article{drimie2013,
-  title={Food security in South Africa: first steps toward a transdisciplinary approach},
+  title={Food security in {S}outh {A}frica: first steps toward a transdisciplinary approach},
   author={Drimie, Scott and McLachlan, Milla},
   journal={Food Security},
   volume={5},
@@ -354,7 +337,7 @@
 }
 
 @article{tendall2015,
-  title={Food system resilience: Defining the concept},
+  title={Food system resilience: defining the concept},
   author={Tendall, DM and Joerin, Jonas and Kopainsky, Birgit and Edwards, P and Shreck, Aimee and Le, QB and Kr{\"u}tli, Pius and Grant, Michelle and Six, Johan},
   journal={Global Food Security},
   volume={6},
@@ -364,7 +347,7 @@
 }
 
 @article{bene2016,
-  title={Is resilience a useful concept in the context of food security and nutrition programmes? Some conceptual and practical considerations},
+  title={Is resilience a useful concept in the context of food security and nutrition programmes? {S}ome conceptual and practical considerations},
   author={B{\'e}n{\'e}, Christophe and Headey, Derek and Haddad, Lawrence and von Grebmer, Klaus},
   journal={Food Security},
   volume={8},
@@ -397,7 +380,7 @@
 }
 
 @article{sampedro2020,
-  title={Food supply system dynamics in the Galapagos islands: Agriculture, livestock and imports},
+  title={Food supply system dynamics in the {G}alapagos islands: agriculture, livestock and imports},
   author={Sampedro, Carolina and Pizzitutti, Francesco and Quiroga, Diego and Walsh, Stephen J and Mena, Carlos F},
   journal={Renewable Agriculture and Food Systems},
   volume={35},
@@ -430,10 +413,18 @@
 }
 
 @article{scalco2019,
-  title={An Agent-Based Model to Simulate Meat Consumption Behaviour of Consumers in Britain},
-  author={Scalco, Andrea and Macdiarmid, Jennie I and Craig, Tony and Whybrow, Stephen and Horgan, Graham},
-  journal={Journal of Artificial Societies and Social Simulation},
-  year={2019}
+   title = {An Agent-Based Model to Simulate Meat Consumption Behaviour of Consumers in {B}ritain},
+   author = {Scalco, Andrea and Macdiarmid, Jennie I. and Craig, Tony and Whybrow, Stephen and Horgan, Graham. W.},
+   journal = {Journal of Artificial Societies and Social Simulation},
+   ISSN = {1460-7425},
+   volume = {22},
+   number = {4},
+   pages = {8},
+   year = {2019},
+   URL = {http://jasss.soc.surrey.ac.uk/22/4/8.html},
+   DOI = {10.18564/jasss.4134},
+   keywords = {Consumer Behaviour, Food Choice, Meat Consumption, Population Health, Social Influence},
+   abstract = {The current rate of production and consumption of meat poses a problem both to peoples&rsquo; health and to the environment. This work aims to develop a simulation of peoples&rsquo; meat consumption in Britain using agent-based modelling. The agents represent individual consumers. The key variables that characterise agents include sex, age, monthly income, perception of the living cost, and concerns about the impact of meat on the environment, health, and animal welfare. A process of peer influence is modelled with respect to the agents&rsquo; concerns. Influence spreads across two eating networks (i.e. co-workers and household members) depending on the time of day, day of the week, and agents&rsquo; employment status. Data from a representative sample of British consumers is used to empirically ground the model. Different experiments are run simulating interventions of the application of social marketing campaigns and a rise in price of meat. The main outcome is the mean weekly consumption of meat per consumer. A secondary outcome is the likelihood of eating meat. Analyses are run on the overall artificial population and by subgroups. The model succeeded in reproducing observed consumption patterns. Different sizes of effect on consumption emerged depending on the application of a social marketing strategy or a price increase. A price increase had a greater effect than environmental and animal welfare campaigns, while a health campaign had a larger impact on consumers&rsquo; behaviour than the other campaigns. An environmental campaign targeted at consumers concerned about the environment produced a boomerang effect increasing the consumption in the population rather than reducing it. The results of the simulation experiments are mainly consistent with the literature on food consumption providing support for future models of public strategies to reduce meat consumption.},
 }
 
 @article{tu2019,
@@ -483,7 +474,7 @@
 @article{kermack1927,
   title={A contribution to the mathematical theory of epidemics},
   author={Kermack, William Ogilvy and McKendrick, Anderson G},
-  journal={Proceedings of the royal society of london. Series A, Containing papers of a mathematical and physical character},
+  journal={Proceedings of the Royal Society of London A},
   volume={115},
   number={772},
   pages={700--721},
@@ -491,11 +482,10 @@
   publisher={The Royal Society London}
 }
 
-@article{strogatz1994,
-  title={Nonlinear dynamics and chaos: with applications to physics},
+@book{strogatz1994,
+  title={Nonlinear Dynamics and Chaos},
   author={Strogatz, Steven H},
-  journal={Biology, Chemistry and Engineering},
-  pages={1},
+  publisher={CRC Press},
   year={1994}
 }
 
@@ -517,13 +507,15 @@
   volume={575},
   number={7781},
   pages={9},
-  year={2019}
+  year={2019},
+  publisher={Nature Publishing Group}
 }
 
-@article{smaldino2017,
+@incollection{smaldino2017,
   title={Models are stupid, and we need more of them},
   author={Smaldino, Paul E},
-  journal={Computational social psychology},
+  booktitle={Computational Models in Social Psychology},
+  editor={Vallacher, RR and Read, SJ and Nowak, A},
   pages={311--331},
   year={2017},
   publisher={Routledge New York, NY}
@@ -552,23 +544,24 @@
   publisher={MIT Press}
 }
 
-@article{meadows1971,
-  title={Dynamics of commodity production cycles.},
-  author={Meadows, Dennis L},
-  journal={Dynamics of commodity production cycles.},
-  year={1971},
-  publisher={Cambridge, Mass.: Wright-Allen Press}
-}
+@phdthesis{meadows1971,
+  author       = {Meadows, Dennis L},
+  title        = {Dynamics of commodity production cycles},
+  school       = {Massachusetts Institute of Technology},
+  year         = 1969,
+  address      = {Massachusetts Institute of Technology}
+ }
+
 
 @book{sterman2000,
   title={Business dynamics},
   author={Sterman, John},
   year={2000},
-  publisher={Irwin/McGraw-Hill c2000..}
+  publisher={Irwin/McGraw-Hill}
 }
 
 @article{chung2018,
-  title={System Dynamics Modelling and Simulation of the Malaysian Rice Value Chain: Effects of the Removal of Price Controls and an Import Monopoly on Rice Prices and Self-sufficiency Levels in Malaysia},
+  title={System Dynamics Modelling and Simulation of the {M}alaysian Rice Value Chain: Effects of the Removal of Price Controls and an Import Monopoly on Rice Prices and Self-sufficiency Levels in {M}alaysia},
   author={Chung, Bonhee},
   journal={Systems Research and Behavioral Science},
   volume={35},
@@ -579,7 +572,7 @@
 }
 
 @article{deGoede2013,
-  title={Robust agriculture: Balancing between vulnerability and stability},
+  title={Robust agriculture: balancing between vulnerability and stability},
   author={De Goede, DM and Gremmen, B and Blom-Zandstra, M},
   journal={NJAS-Wageningen Journal of Life Sciences},
   volume={64},
@@ -589,7 +582,7 @@
 }
 
 @article{legrand2019,
-  title={The empirical merit of structural explanations of commodity price volatility: Review and perspectives},
+  title={The empirical merit of structural explanations of commodity price volatility: review and perspectives},
   author={Legrand, Nicolas},
   journal={Journal of Economic Surveys},
   volume={33},
@@ -601,70 +594,65 @@
 
 @misc{AHDBeuroexhange2015,
   title = {{How does the exchange rate affect the GB pig price?}},
-  author = {Agricultural and Horticultural Development Board},
+  author = {{Agricultural and Horticultural Development Board}},
   shortauthor={{AHDB}},
   year = {2015},
-  howpublished = {\url{https://pork.ahdb.org.uk/prices-stats/news/2015/august/how-does-the-exchange-rate-affect-the-gb-pig-price/}},
-  note = {Accessed: 2020-07-08}
+  note = {Available at \url{https://pork.ahdb.org.uk/prices-stats/news/2015/august/how-does-the-exchange-rate-affect-the-gb-pig-price/}}
 }
 
 @misc{IME2013,
   title = {{Global food. Waste not, want not.}},
-  author = {Institute of Mechanical Engineers},
+  author = {{Institute of Mechanical Engineers}},
   shortauthor={{IME}},
   year = {2013}
 }
 
 @misc{AHDBpocketbook2018,
-  title = {{Pig Pocketbook - 2018}},
-  author = {Agricultural and Horticultural Development Board},
+  title = {{Pig Pocketbook 2018}},
+  author = {{Agricultural and Horticultural Development Board}},
   shortauthor={{AHDB}},
-  year = {2018}
+  year = {2018},
+  note = {Available at \url{https://ahdb.org.uk/knowledge-library/pig-and-poultry-pocketbook}}
 }
 
 @misc{AHDBherdnumbers2020,
   title = {{UK pig numbers and holdings}},
-  author = {Agricultural and Horticultural Development Board},
+  author = {{Agricultural and Horticultural Development Board}},
   shortauthor={{AHDB}},
   year = {2020},
-  howpublished = {\url{https://ahdb.org.uk/pork/uk-pig-numbers-and-holdings}},
-  note = {Accessed: 2020-07-08}
+  note = {Available at \url{https://ahdb.org.uk/pork/uk-pig-numbers-and-holdings}}
 }
 
 @misc{AHDBpigmeatrade,
   title = {{Pig meat trade}},
-  author = {Agricultural and Horticultural Development Board},
+  author = {{Agricultural and Horticultural Development Board}},
   shortauthor={{AHDB}},
   year = {2020},
-  howpublished = {\url{https://ahdb.org.uk/pork/pig-meat-trade}},
-  note = {Accessed: 2020-08-24}
+  note = {Available at \url{https://ahdb.org.uk/pork/pig-meat-trade}}
 }
 
 @misc{DEFRAlivestockprices,
   title = {{Livestock prices, finished and store}},
   year = {2020},
-  author = {Department for Environment, Food and Rural Affairs},
+  author = {{Department for Environment, Food and Rural Affairs}},
   shortauthor={{DEFRA}},
-  howpublished = {\url{https://www.gov.uk/government/statistical-data-sets/livestock-prices-finished-and-store}},
-  note = {Accessed: 2020-08-24}
+  note = {Available at \url{https://www.gov.uk/government/statistical-data-sets/livestock-prices-finished-and-store}}
 }
 
 @misc{DEFRAlivestocknumbers,
   title = {{Livestock numbers in England and the UK}},
   year = {2020},
-  author = {Department for Environment, Food and Rural Affairs},
+  author = {{Department for Environment, Food and Rural Affairs}},
   shortauthor={{DEFRA}},
-  howpublished = {\url{https://www.gov.uk/government/statistical-data-sets/structure-of-the-livestock-industry-in-england-at-december}},
-  note = {Accessed: 2020-08-24}
+  note = {Available at \url{https://www.gov.uk/government/statistical-data-sets/structure-of-the-livestock-industry-in-england-at-december}}
 }
 
 @misc{DEFRApigcattlestats2020,
   title = {{Latest cattle, sheep and pig slaughter statistics}},
   year = {2020},
-  author = {Department for Environment, Food and Rural Affairs},
+  author = {{Department for Environment, Food and Rural Affairs}},
   shortauthor={{DEFRA}},
-  howpublished = {\url{https://www.gov.uk/government/statistics/cattle-sheep-and-pig-slaughter}},
-  note = {Accessed: 2020-08-24}
+  note = {Available at \url{https://www.gov.uk/government/statistics/cattle-sheep-and-pig-slaughter}}
 }
 
 @article{pimm1984,
@@ -708,7 +696,7 @@
 }
 
 @article{coase1935,
-  title={Bacon production and the pig-cycle in Great Britain},
+  title={Bacon production and the pig-cycle in {G}reat {B}ritain},
   author={Coase, Ronald H and Fowler, Ronald F},
   journal={Economica},
   volume={2},
@@ -741,7 +729,7 @@
 }
 
 @article{parker2014,
-  title={On the centenary of the German hog cycle: New findings},
+  title={On the centenary of the {German} hog cycle: new findings},
   author={Parker, Phillip S and Shonkwiler, JS},
   journal={European Review of Agricultural Economics},
   volume={41},
@@ -751,24 +739,16 @@
   publisher={Oxford University Press}
 }
 
-@article{zawadzka2010,
-  title={The history of research on the" pig cycle"},
+@TechReport{zawadzka2010,
   author={Zawadzka, Danuta},
-  journal={Zagadnienia Ekonomiki Rolnej},
-  number={1 Dodatek},
+  title={The history of research on the `pig cycle'},
   year={2010},
-  publisher={-}
-}
-
-@article{nerlove1958,
-  title={Adaptive expectations and cobweb phenomena},
-  author={Nerlove, Marc},
-  journal={The Quarterly Journal of Economics},
-  volume={72},
-  number={2},
-  pages={227--240},
-  year={1958},
-  publisher={MIT Press}
+  institution={Institute of Agricultural and Food Economics - National Research Institute (IAFE-NRI)},
+  type={Problems of Agricultural Economics / Zagadnienia Ekonomiki Rolnej},
+  url={https://ideas.repec.org/p/ags/iafepa/205144.html},
+  number={205144},
+  keywords={Livestock Production/Industries; Production Economics; Research Methods/ Statistical Methods},
+  doi={10.22004/ag.econ.205144},
 }
 
 @article{gouel2012,
@@ -783,17 +763,21 @@
 }
 
 @article{taylor2006,
-  title={Strategic considerations in the development of lean agri-food supply chains: a case study of the UK pork sector},
+  title={Strategic considerations in the development of lean agri-food supply chains: a case study of the {UK} pork sector},
   author={Taylor, David H},
+  volume={11},
+  number={3},
   journal={Supply Chain Management: An International Journal},
   year={2006},
   publisher={Emerald Group Publishing Limited}
 }
 
 @article{dawson2009,
-  title={The UK pig cycle: a spectral analysis},
+  title={The {UK} pig cycle: a spectral analysis},
   author={Dawson, Philip John},
   journal={British Food Journal},
+  volume={111},
+  number={11},
   year={2009},
   publisher={Emerald Group Publishing Limited}
 }
@@ -805,10 +789,10 @@
   year = {2011}
 }
 
-@inproceedings{bowman2013,
-  title={Opportunist dealing in the UK pig meat supply chain: Trader mentalities and alternatives},
+@article{bowman2013,
+  title={Opportunist dealing in the UK pig meat supply chain: trader mentalities and alternatives},
   author={Bowman, Andrew and Froud, Julie and Johal, Sukhdev and Leaver, Adam and Williams, Karel},
-  booktitle={Accounting Forum},
+  journal={Accounting Forum},
   volume={37},
   number={4},
   pages={300--314},
