add python solver

--- a/paper/cfs-model-refs.bib
+++ b/paper/cfs-model-refs.bib
@@ -1,3 +1,17 @@
+@article{clapp2017,
+title = {Food self-sufficiency: Making sense of it, and when it makes sense},
+journal = {Food Policy},
+volume = {66},
+pages = {88-96},
+year = {2017},
+issn = {0306-9192},
+doi = {https://doi.org/10.1016/j.foodpol.2016.12.001},
+url = {https://www.sciencedirect.com/science/article/pii/S0306919216305851},
+author = {Jennifer Clapp},
+keywords = {Food self-sufficiency, Food security, Trade, Food imports, Food exports},
+abstract = {Food self-sufficiency gained increased attention in a number of countries in the wake of the 2007–08 international food crisis, as countries sought to buffer themselves from volatility on world food markets. Food self-sufficiency is often presented in policy circles as the direct opposite of international trade in food, and is widely critiqued by economists as a misguided approach to food security that places political priorities ahead of economic efficiency. This paper takes a closer look at the concept of food self-sufficiency and makes the case that policy choice on this issue is far from a straightforward binary choice between the extremes of relying solely on homegrown food and a fully open trade policy for foodstuffs. It shows that in practice, food self-sufficiency is defined and measured in a number of different ways, and argues that a broader understanding of the concept opens up space for considering food self-sufficiency policy in relative terms, rather than as an either/or policy choice. Conceptualizing food self-sufficiency along a continuum may help to move the debate in a more productive direction, allowing for greater consideration of instances when the pursuit of policies to increase domestic food production may make sense both politically and economically.}
+}
+
 @article{helm2017,
   title={Agriculture after {B}rexit},
   author={Helm, Dieter},
