--- a/paper/cfs-model-manuscript.tex
+++ b/paper/cfs-model-manuscript.tex
@@ -2,12 +2,18 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{mathrsfs}
 \usepackage{amsmath}
-%\usepackage{mathptmx}    % times with math
-%\usepackage{pxfonts}
-%\usepackage[sc]{mathpazo}
 \usepackage[T1]{fontenc}
 \usepackage{subcaption}
-\usepackage[font={footnotesize,it}]{caption}
+\captionsetup[sub]{
+    labelfont=bf,
+    labelformat=simple,
+    labelsep=colon, 
+    singlelinecheck=off, 
+    position=top, 
+    justification=raggedright,
+}
+\renewcommand{\thesubfigure}{\Alph{subfigure}}
+\usepackage[font={footnotesize}]{caption}
 \usepackage{authblk}
 \usepackage{lineno}
 \usepackage{graphicx}
@@ -22,7 +28,7 @@
   citecolor=blue
 }
 
-\graphicspath{{/home/conor/Dropbox/Leeds_postdoc/Papers/cfs-model/paper/figures/}}
+\graphicspath{{/Users/cmgoold/Dropbox/Leeds_postdoc/Papers/complex-food-system/results/plots/}}
 
 \usepackage[textfont=it, labelfont=bf]{caption}
 
@@ -43,7 +49,16 @@
 
 \maketitle
 \begin{abstract}
-  The global food system faces various endogeneous and exogeneous, biotic and abiotic risk factors, including a rising human population, higher population densities, price volatility and climate change. Quantitative models play an important role in understanding food systems' expected responses to shocks and stresses. Here, we present a stylised mathematical model of a national-level food system that incorporates domestic supply of a food commodity, international trade, consumer demand, and food commodity price. We derive a critical compound parameter signalling when domestic supply will become unsustainable and the food system entirely dependent on imports, which results in higher commodity prices, lower consumer demand and lower inventory levels. Using Bayesian estimation, we apply the dynamic food systems model to infer the sustainability of the UK pork industry. We find that the UK pork industry is currently sustainable but because the industry is dependent on imports to meet demand, a decrease in self-sufficiency below 50\% (current levels are 60-65\%) would lead it close to the critical boundary signalling its collapse. Our model provides a theoretical foundation for future work to determine more complex causal drivers of food system vulnerability.\\
+The global food system faces various endogeneous and exogeneous, biotic and abiotic risk factors, including a rising human population, higher population densities, price volatility and climate change. Quantitative models play an important role in understanding food systems' expected responses to shocks and stresses. 
+Here, we present a novel and general mathematical model of a food system, which incorporates dynamics of supply, demand, international trade, and food commodity price. We derive a critical compound parameter signalling when supply will become unsustainable and the food system entirely dependent on external supplements, such as imports, which results in higher commodity prices, lower consumer demand and lower inventory levels. 
+We apply our dynamic food system model to the sustainability of 
+four UK food systems that present a range of self-sufficiencies: 
+pig, sheep, beef and cheese. 
+Using Bayesian estimation, the complex food systems model 
+accurately reflects the self-sufficiency of each industry.
+The critical parameter values illustrate that whereas sheep
+and beef industries are 
+\\
 \end{abstract}
 
 %\newpage
@@ -51,22 +66,39 @@
 \section{Introduction}
 Food security is defined as ``when all people at all times have physical, social and economic access to sufficient, safe and nutritous food to meet their dietary needs and preferences for an active and healthy life'' \cite{FAO2009}. The realisation of food security depends on the three pillars of access, utilisation and availability \cite{maxwell1996,barrett2010}, and therefore is an outcome of coupled agricultural, ecological and sociological systems \cite{hammond2012,ericksen2008,ingram2011}. In recent years, the resilience of food systems has become a priority area of research \cite{nystrom2019,tendall2015,bene2016,seekell2017} as biotic and abiotic, endogeneous and exogeneous demands on food systems grow, and the deleterious effects food systems currently have on the environment become more apparent \cite{springmann2018,strzepek2010}. The challenge of meeting the requirements of food security is for food systems to expand their production capacities while remaining resilient to unpredictable perturbations and limiting their effects on the environment, such as reducing waste \cite{ericksen2010}.
 
-Food systems research is inherently transdisciplinary \cite{drimie2013,hammond2012}, of which one strand is computational and mathematical modelling. One utility of quantitative modelling is the ability to build and perturb realistic `systems models' of food systems to project important outcomes, such as future food production levels, farmer profitability, envirnomental degradation, food waste, and consumer behaviour \cite{springmann2018,marchand2016,sampedro2020,suweis2015,scalco2019,allen2016}. The difficulty in modelling food systems is their complexity, frequently resulting in large models with tens to hundreds of parameters and variables (e.g. \cite{sampedro2020,springmann2018}), which are challenging to analyse and even more challenging to statistically estimate from noisy real-world data \cite{sterman2000}. In contrast, a handful of authors have used relatively simple, theoretical models that are more amenable to formal analysis, and have fewer parameters to estimate from data. For example, \cite{suweis2015} link population dynamics to food availability and international trade using a generalised logistic model. \cite{tu2019} recently reported that the global food system is approaching a critical point signalling collapse into an unsustainable regime by condensing the multi-dimensional global food trade network into a bi-stable, one-dimensional system (using the framework of \cite{gao2016}). Simple models of coupled ecological, economic and agricultural processes have also been investigated, such as to explain the emergence of poverty traps, which have direct effects on individuals' access to food \cite{ngonghala2017}.
+Food systems research is inherently transdisciplinary \cite{drimie2013,hammond2012}, of which one strand is computational and mathematical modelling. 
+One utility of quantitative modelling is the ability to build and perturb realistic `systems models' of food systems to project important outcomes, such as future food production levels, farmer profitability, envirnomental degradation, food waste, and consumer behaviour \cite{springmann2018,marchand2016,sampedro2020,suweis2015,scalco2019,allen2016}. 
+The difficulty in modelling food systems is their complexity, frequently resulting in large models with tens to hundreds of parameters and variables (e.g. \cite{sampedro2020,springmann2018}), which are challenging to analyse and even more challenging to statistically estimate from noisy real-world data \cite{sterman2000}. 
+Alternatively, while simplified models are less suitable for making predictions of complex systems' outcomes, their tractability makes them better placed to elicit causal explanations and generate hypotheses of how systems work \cite{smaldino2017,smaldino2019,otto2020}. These \textit{stylised} models are the backbones of scientific disciplines such as ecology \cite{may1973}, evolutionary biology \cite{boyd2003}, epidemiology \cite{kermack1927}, economics \cite{nerlove1958}, and physics \cite{strogatz1994}. For instance, stylised mathematical models of brain networks, animal collectives, ecosystems and cellular dynamics have been used to find the critical points at which they show abrupt qualitative changes in their behaviours \cite{sole1996,scheffer2001}. 
 
-While simplified models are less suitable for making predictions of complex systems' outcomes, their tractability makes them better placed to elicit causal explanations and generate hypotheses of how systems work \cite{smaldino2017,smaldino2019,otto2020}. These \textit{stylised} models are the backbones of scientific disciplines such as ecology \cite{may1973}, evolutionary biology \cite{boyd2003}, epidemiology \cite{kermack1927}, economics \cite{nerlove1958}, and physics \cite{strogatz1994}. For instance, stylised mathematical models of brain networks, animal collectives, ecosystems and cellular dynamics have been used to find the critical points at which they show abrupt qualitative changes in their behaviours \cite{sole1996,scheffer2001}. Food systems research, however, lacks such foundational models. Research on commodity production cycles has developed models to couple agricultural production, supply chains, consumer demand, price and human decision-making \cite{meadows1971,sterman2000}. However, applications of systems dynamics models of commodity cycles are frequently high dimensional, encoding multiple modes of behaviour that are not easily amenable to standard mathematical analysis. Gaining greater theoretical insight into the dynamics of food systems and food security would be aided by simpler models of coupled agri-food systems.
+Food systems research, however, lacks such foundational models, although recent work has adopted a more theoretical approach. 
+For example, Suweis et al. \cite{suweis2015} link population dynamics to food availability and international trade using a generalised logistic model. 
+Tu et al. \cite{tu2019} recently reported that the global food system is approaching a critical point signalling collapse into an unsustainable regime by condensing the multi-dimensional global food trade network into a bi-stable, one-dimensional system (using the framework of \cite{gao2016}). 
+Simple models of coupled ecological, economic and agricultural processes have also been investigated, such as to explain the emergence of poverty traps, which have direct effects on individuals' access to food \cite{ngonghala2017}.
 
-In this paper, we develop and analyse a stylised model of a food system inspired by the systems dynamics modelling of \cite{meadows1971} and \cite{sterman2000}, yet simple enough to offer general theoretical results. We focus on modelling a national-level food system, where the effects of international trade on domestic production is examined. Like the stylised models used to understand the causal processes in evolution, epidemics, and ecological interactions, our approach necessarily ignores many important features of real food systems. Nonetheless, its relative simplicity allows us to elucidate the precise conditions under which different stable modes of behaviour important to food system resilience emerge in our system.
+In this paper, we develop and analyse a stylised model of a food system that is analytically tractable and offers general theoretical results 
+applicable to any food system. 
+The model is inspired by the systems dynamics modelling of Meadows \cite{meadows1971} and Sterman \cite{sterman2000}, 
+whose research on commodity production cycles developed models coupling agricultural production, supply chains, consumer demand, price and human decision-making \cite{meadows1971,sterman2000}. 
+However, application of these commodity production cycle models are frequently high dimensional, encoding multiple modes of behaviour that are not easily amenable to standard mathematical analysis. 
+We focus on modelling a national-level food system, 
+where the effects of international trade on domestic production is examined. 
+Like the stylised models used to understand the causal processes in evolution, epidemics, and ecological interactions, 
+our approach necessarily ignores many important features of real food systems. 
+Nonetheless, its relative simplicity allows us to elucidate the precise conditions under which 
+different stable modes of behaviour important to food system resilience emerge in our system.
 
-We apply our theoretical model to the case of the UK pork industry, a key contributor to the UK meat industry which currently employs 75,000 employees and is worth \pounds1.25 billion \cite{DEFRA2019auk18}. Historically, pig industries have been of much interest to economists and agronomists as one of the first investigations into business or `pork' cycles \cite{haldane1934,coase1935,ezekiel1938,harlow1960,meadows1971,zawadzka2010,parker2014,sterman2000}. Business cycles reflect the oscillations between commodity prices and supply, which have been posited to be the result of both endogeneous (e.g. \cite{nerlove1958}) and exogeneous mechanisms (e.g. see \cite{gouel2012}). Over the last 20 years, however, the size of the UK pig industry has decreased by approximately 50\%, from 800,000 to approximately 400,000 sows, due to a combination of legislative, epidemiological, and trade-related issues \cite{taylor2006,dawson2009}. Following the ban on sow gestation crates in 1999, as well as disease outbreaks in the early 2000s, imports of pig meat increased by 50\% \cite{DEFRApigcattlestats2020}, exceeding domestic production. While domestic production has returned to accounting for around 60-65\% of total supply \cite{DEFRApigcattlestats2020}, the UK pig industry is still at risk from high costs of production \cite{BPEXprofitability2011} and `opportunistic dealing' within the pork supply chain favouring cheaper imports \cite{bowman2013}. The sustainability of the UK pig industry is, thus, a concern for UK food system resilience, particularly with the incipient threats of Brexit and the COVID-19 pandemic that are affecting international trade, labour availability, commodity prices, and consumer demand \cite{power2020,feng2017,poppy2019}. We demonstrate how our food systems model can be used to infer the sustainability of the UK pork industry using Bayesian estimation, enabling us to quantify full uncertainty in parameter estimtates.
+We apply our theoretical model to the case of the UK pork industry, a key contributor to the UK meat industry which currently employs 75,000 employees and is worth \pounds1.25 billion \cite{DEFRA2019auk18}. Historically, pig industries have been of much interest to economists and agronomists as one of the first investigations into business or `pork' cycles \cite{haldane1934,coase1935,ezekiel1938,harlow1960,meadows1971,zawadzka2010,parker2014,sterman2000}. Business cycles reflect the oscillations between commodity prices and supply, which have been posited to be the result of both endogeneous (e.g. \cite{nerlove1958}) and exogeneous mechanisms (e.g. see \cite{gouel2012}). Over the last 20 years, however, the size of the UK pig industry has decreased by approximately 50\%, from 800,000 to approximately 400,000 sows, due to a combination of legislative, epidemiological, and trade-related issues \cite{taylor2006,dawson2009}. Following the ban on sow gestation crates in 1999, as well as disease outbreaks in the early 2000s, imports of pig meat increased by 50\% \cite{DEFRApigcattlestats2020}, exceeding domestic production. While domestic production has returned to accounting for around 60-65\% of total supply \cite{DEFRApigcattlestats2020}, the UK pig industry is still at risk from high costs of production \cite{BPEXprofitability2011} and `opportunistic dealing' within the pork supply chain favouring cheaper imports \cite{bowman2013}. The sustainability of the UK pig industry is, thus, a concern for UK food system resilience, particularly due to the impacts of Brexit and the COVID-19 pandemic that are disrupting international trade, labour availability, commodity prices, and consumer demand \cite{power2020,feng2017,poppy2019}. We demonstrate how our food systems model can be used to infer the sustainability of the UK pork industry using Bayesian estimation, enabling us to quantify full uncertainty in parameter estimtates.
 
 \section{Materials and methods}
+
 
 \subsection{Theoretical model}
 Our food system model is composed of coupled ordinary differential equations, with the state variables of capital, inventory, consumer demand, and price (Figure \ref{fig_cfs}; see variable and parameter definitions in Table \ref{t_symbols}). While we focus on food commodities, the model's generality means that it could be applied to other types of commodity. Capital represents a raw material used to gauge the viability of the domestic industry, which could represent, for instance, the number of animals in the breeding herd for meat industries (e.g. \cite{meadows1971}) or the number of paddy fields in rice supply chains (e.g. \cite{chung2018}). Inventory is the stock of processed food commodity being investigated. consumer demand represents the amount of inventory demanded per time unit by the population of consumers, and is dependent on the commodity price. The commodity price represents the price received by producers per unit of commodity produced, although we do not distinguish between producer and retail prices here (i.e. the producer price is assumed to be directly proportional to the retail price). While many of the mechanisms in supply chain functioning may be represented as a discrete-time system, we assume the aggregate behaviour of the national-level food system is adequately approximated in continuous time by a system of differential equations.
 
 \begin{figure}[t!]
   \centering
-  \includegraphics[scale=1]{figure_1.pdf}
+  \includegraphics[scale=1]{fig-1.pdf}
   \caption{The general structure of the theoretical complex food system model. Blue circles denote the the four state variables (capital, inventory, demand and price). Solid arrows indicate the different flows into and out of each state variable comprising their rate of change, and the arrow labels display generic functions of the model state variables and parameters (see Table \ref{t_symbols} for the specific definitions used in this model). Dashed arrows show dependencies between different state variables and flows.}
   \label{fig_cfs}
 \end{figure}
@@ -89,7 +121,8 @@ Inventory changes according to:
 %
 The first term represents the amount of inventory generated by domestic capital per time unit (i.e. domestic supply), where $f$ is a production rate, and $g$ is a conversion factor representing the amount of inventory units produced per unit of capital. Inventory is wasted (i.e. produced but not consumed) at rate $w$. The third term denotes the rate of inventory consumption by consumers, which is a non-linear Holling type-II/Michaelis-Menten function asymptoting at $I$ for $D >> I$. The dimensionless function $I/(sD + I)$ can be interpreted as the proportion of the demand that can be satisfied with the current inventory level. The parameter $s$ is the `reference coverage' converting inventory demanded per time unit into commodity units, and is interpreted as the number of time units-worth of inventory processors desire to have in stock. Perishable food commodities (e.g. meat) will have a lower reference coverage, whereas less perishable items (e.g. rice, flour) can be stored for longer periods and, therefore, stock levels can be controlled by increasing $s$, lowering the proportion of demanded units satisfied.
 
-The final term in equation \ref{eq_inventory} represents international trade, and its formulation can communicate different dynamics between domestic producers, processors and retailers. We retain simplicity by assuming that trade is proportional to the difference between a reference demand level ($h$) and current domestic production ($f g C$). When $h > f g C$, inventory is imported, and when $h < f g C$, inventory is exported. Realised demand ($D$) is a function of $h$ and the current commodity price (see below), and therefore $h$ represents the expected, baseline demand all else being equal \cite{sterman2000}. Trade levels adapt to the reference demand to avoid a positive feedback between higher prices, lower demand, and collapse of the commodity market for countries that are net importers, or a positive feedback between low prices, high demand, and exponentially increasing production for net exporters. In some industries, including the UK pork industry, cheaper international imports lower the domestic commodity price \cite{AHDBeuroexhange2015}, and thus importing more than domestic supply when demand drops due to higher prices is a mechanism for lowering the commodity price and increasing demand. The difference between reference demand and domestic production that is traded, however, is limited by factors such as trade tariffs (e.g. \cite{feng2017}) or the ability of a nation to attract trade partners, and thus the parameter $k$ controls the proportion of this difference. For countries that rely on international trade to supplement domestic supply to meet demand (net importers), $1 - k$ represents the self-sufficiency of the domestic industry (i.e. the percentage of total supplies produced domestically).
+The final term in equation \ref{eq_inventory} represents international trade, and its formulation can communicate different dynamics between domestic producers, processors and retailers. We retain simplicity by assuming that trade is proportional to the difference between a reference demand level ($h$) and current domestic production ($f g C$). When $h > f g C$, inventory is imported, and when $h < f g C$, inventory is exported. Realised demand ($D$) is a function of $h$ and the current commodity price (see below), and therefore $h$ represents the expected, baseline demand all else being equal \cite{sterman2000}. Trade levels adapt to the reference demand to avoid a positive feedback between higher prices, lower demand, and collapse of the commodity market for countries that are net importers, or a positive feedback between low prices, high demand, and exponentially increasing production for net exporters. In some industries, including the UK pork industry, cheaper international imports lower the domestic commodity price \cite{AHDBeuroexhange2015}, and thus importing more than domestic supply when demand drops due to higher prices is a mechanism for lowering the commodity price and increasing demand. The difference between reference demand and domestic production that is traded, however, is limited by factors such as trade tariffs (e.g. \cite{feng2017}) or the ability of a nation to attract trade partners, and thus the parameter $k$ controls the proportion of this difference. 
+For countries that rely on international trade to supplement domestic supply to meet demand (net importers), $1 - k$ represents the long-term average self-sufficiency (i.e. the ratio of domestic production to total supplies; \cite{clapp2017}) of the domestic industry. 
 
 The instantaneous rate of change in demand is modelled as a simple function of reference demand and the commodity price to reference price ratio:
 %
@@ -288,26 +321,49 @@ By using the Routh-Hurwitz conditions, the sign of the remaning eigenvalues' rea
 %
 The dependence of this critical ratio to changes in the original parameter values is shown in Figure \ref{figure2}a. The numerator represents a weighting of three factors: $i)$ the \textit{reference profitability} of capital production ($\alpha$; Table \ref{t_nd_symbols}), $ii)$ the \textit{need for new commodity}, where either higher rates of waste or greater reference coverage increases the critical ratio, and $ii)$ the \textit{speed of capital production}, where higher rates ($a$ in Table \ref{t_symbols}) increases the critical ratio (Figure \ref{figure2}a). By contrast, the denominator represents the \textit{total strength} of international trade, which is composed of the trade strength parameter ($\kappa$), weighted by the viability of domestic capital: if the capital production rate increases, or capital depreciation rate decreases, the total trade strength becomes smaller, serving to increase the critical ratio.
 
-\begin{figure}[t!]
-  \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.6]{figure_2a.png}
-  \end{subfigure}%
-  ~%
-  \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.6]{figure_2b.png}
-  \end{subfigure}
-
-  \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.6]{figure_2c.png}
-  \end{subfigure}%
-  ~%
-  \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.6]{figure_2d.png}
+\begin{figure}[t]
+  \centering
+  \begin{subfigure}{\textwidth}
+      \centering
+      \caption{}
+      \hspace{0em}
+      \includegraphics[scale=0.15]{fig-2a.png}
+      \label{fig:2a}
   \end{subfigure}%
 
-  \caption{Stability of the model incorporating international trade ($0 < \kappa < 1$). Panel a shows the sensitivity of the critical ratio to parameters in Table \ref{t_symbols}. The x-axis shows the ratio of the parameters to their reference values ($q = 160$, $b = 140$, $e = 0.033$, $a = 0.2$, $w = 0.33$, $s=1$, $k=0.5$). The horizontal dashed line shows the critical ratio threshold of unity. Panels b-d show the stable modes of behaviour in ($\kappa, \alpha$) space for differing values of $\beta$, distinguishing between unsustianable (red), sustainable with imports (blue), and sustainable with exports (green) behaviours. Panels b-d are produced with the remaining parameters at $\gamma = 26$, $\omega = 10$ and $\delta = 5$.}
+  \begin{subfigure}{\textwidth}
+      \centering
+      \caption{}
+      \hspace{0em}
+      \includegraphics[scale=0.15]{fig-2b.png}
+      \label{fig:2b}
+  \end{subfigure}%
+
+  \begin{subfigure}{\textwidth}
+      \centering
+      \caption{}
+      \hspace{0em} 
+      \includegraphics[scale=0.15]{fig-2c.png}
+      \label{fig:2c}
+  \end{subfigure}%
+  
+  \begin{subfigure}{\textwidth}
+      \centering
+      \caption{}
+      \hspace{0em}
+      \includegraphics[scale=0.15]{fig-2d.png}
+      \label{fig:2d}
+  \end{subfigure}%
+
+  \caption{
+      Analysis of the model incorporating international trade ($0 < \kappa < 1$). 
+      Panel A shows the sensitivity of the critical ratio to parameters in Table \ref{t_symbols} (reference values set at $q = 160$, $b = 140$, $e = 0.033$, $a = 0.2$, $w = 0.33$, $s=1$, $k=0.5$), where the horizontal dashed line shows the threshold of unity. Panel B shows the stable modes of behaviour in ($\kappa, \alpha$) space for differing values of $\beta$ (remaining parameters fixed at $\gamma = 26$, $\omega = 10$, $\delta = 5$). Panel C demonstrates Bayesian estimation of the model on simulated data; yellow lines indicate the raw simulated trajectories, red points show simulated data with noise, black lines show 200 samples from the posterior distribution of the mean posterior trajectories estimated by the Bayesian fit, and blue points illustrate the posterior predictive distribution.   
+ Panel D shows the critical and surplus ratios accurately estimated by Bayesian estimation from the simulated data. Code for the simulated data example is provided in the supplementary materials.
+ }
   \label{figure2}
 \end{figure}
+
+\clearpage
 
 When the critical ratio exceeds 1, the sustainable domestic production equilibrium is given by $\{\frac{2 \gamma \kappa (- 1 - \beta) + \alpha (\gamma + 2 \omega)}{2 \delta (1+\beta)(1 - \kappa) }, \frac{\alpha}{1 + \beta}, \frac{\alpha}{1 + \beta}, \frac{1 + \beta}{\alpha}\}$. In the latter case, the equilibrium values of inventory, demand and price are the same as the equilibrium values of the model without international trade (see above), determined by the profitability of the domestic industry and the ratio of capital depreciation and growth rates. However, equilibrium inventory and demand are lower, and equilibrium price is higher, than when domestic supply is unsustainable. For example, the conditions for equilibrium price when domestic supply is unsustainable to be higher than when domestic supply is sustainable (i.e. $\frac{\omega + \frac{\gamma}{2}}{\kappa \gamma} > \frac{1 + \beta}{\alpha}$) is exactly the critical ratio. The latter trends are also seen the closer a system comes to the critical ratio. Thus, while international trade in the short term increases inventory levels, decreases the coverage (see model description) and, therefore, decreases the price and increases demand, the long-term result of the unsustainable domestic production regime is higher prices, lower demand and lower inventory levels.
 
@@ -345,36 +401,41 @@ Posterior predictions (Figure \ref{fig_posterior_predictions}) reflect the most 
   \label{table_parameter_estimates}
 \end{table}
 
+\begin{figure}[t]
+    \includegraphics[scale=0.2]{fig-3}
+    \caption{Application of the food systems model to UK pork, sheep, beef and cheese industry data.}
+\end{figure}
+
 \begin{figure}[t!]
-  \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.5]{figure_3a.png}%
-  \end{subfigure}%
-  %~
-  \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.5]{figure_3b.png}
-  \end{subfigure}
 
-  \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.5]{figure_3c.png}
+  \begin{subfigure}{\textwidth}
+      \caption{}
+      \includegraphics[scale=0.3]{fig-4a.png}%
   \end{subfigure}%
-  %~
-  \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.5]{figure_3d.png}
-  \end{subfigure}
 
-  \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.5]{figure_3e.png}
+  \begin{subfigure}{\textwidth}
+      \caption{}
+      \includegraphics[scale=0.3]{fig-4b.png}%
   \end{subfigure}%
-  %~
-  \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.5]{figure_3f.png}
-  \end{subfigure}
+
   \caption{Fitting the food systems model to the UK pig industry data. Orange filled circles show the raw monthly data (some data is missing), thin black lines display 200 random samples from the posterior distribution, the thick black lines indicate the mean posterior trajectory, and open blue circles display 200 random samples from the posterior predictive distribution (i.e. predictions incorporating random noise ).}
   \label{fig_posterior_predictions}
 \end{figure}
 
 \section{Discussion}
-This paper has presented a theoretical model of a complex food system that balances analytical tractability and realism. The model represents the functioning of a national food system including international trade, and we have shown that the sustainability of the domestic industry depends on a critical compound parameter that comprises the profitability of the domestic industry (the reference price to cost of capital production ratio), the need for new commodity (commodity waste rates and reference coverage), the ability to produce new capital (captial growth and depreciation rates), and the strength of international trade (see Figure \ref{figure2}a). Below unity, this critical ratio signals that international trade outcompetes the domestic industry and the model enters an unsustainable domestic supply regime characterised by complete reliance on imports. This unsustainable regime also results in higher equilibrium commodity prices, lower inventory and lower consumer demand than when domestic supply is sustainable. By estimating the key parameters of this ratio from data on real food systems, the sustainability of domestic industries, conditional on the assumptions of the model, can be evaluated.
+This paper has presented a theoretical model of a complex food system that balances analytical tractability and realism. 
+Using a national-level case study, we demonstrate that the model is capable of representing 
+a national food system participating in international trade, 
+and that the sustainability of food systems depends on a critical compound parameter  
+comprising the profitability of the industry (the reference price to cost of capital production ratio), 
+the need for new commodity (commodity waste rates and reference coverage), 
+the ability to produce new capital (captial growth and depreciation rates), 
+and the strength of international trade (see Figure \ref{figure2}a). 
+Below unity, this critical ratio signals that international trade outcompetes the domestic industry 
+and the model enters an unsustainable domestic supply regime characterised by complete reliance on imports. 
+This unsustainable regime also results in higher equilibrium commodity prices, lower inventory and lower consumer demand 
+than when domestic supply is sustainable. By estimating the key parameters of this ratio from data on real food systems, 
+the sustainability of domestic industries, conditional on the assumptions of the model, can be evaluated.
 
 Within the sustainable regime of the model, a key factor determining the long-term behaviour of the food system depends on whether it is characterised by net imports or net exports. In the context of the mathematical model, this is represented by whether the nation produces enough food to meet the reference demand ($h$ in Table \ref{t_symbols}). We find that a food system that must supplement domestic supply with imports in order to meet demand (a net importer) is more vulnerable to collapse because increasing trade potential (higher $k$ values) results in reduced self-sufficiency. Food systems that produce a surplus of domestic commodity can benefit from increased trade potential by exporting more (Figure \ref{figure2}), assuming that export markets are always available. This supports the current literature on the importance of diversifying food commodity sources to ensure food system resilience. Rapid globalisation has meant that 23\% of the food produced globally, and 26\% of global calorie production, is traded \cite{dodorico2014,tu2019,poppy2019}, and the majority of the world's diet is partly dependent on food imports \cite{kummu2020} with several countries not producing enough food to satisfy basic, per-capita caloric intake \cite{dodorico2014}. While global food trade has led to, and encourages further, diversification of diets, it has also led to a less resilient global food system. This is because most countries in the trade network rely on imports from a smaller number of dominant, trade partners \cite{kummu2020}, results supported also by theoretical modelling \cite{tu2019}. The model here provides a critical boundary where a nation's food system may become entirely dependent on imports, leading to higher commodity prices, lower consumer demand and lower overall inventory levels. By the same token, complete self-sufficiency is an unrealistic and potentially harmful goal where the food system is again only reliant on a single supply chain \cite{helm2017}.
 
